--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -135,6 +135,7 @@ steps:
                     PATCH="0"
                     NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-preview.1"
                     echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
+                    echo "##vso[task.setvariable variable=IsMajor;isOutput=true]true"
                     echo "Preview tag created from last version."
                 fi
             else
@@ -149,6 +150,7 @@ steps:
                     PATCH=`echo $VERSION | awk -F "." '{print $3}'`
                     NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-${preview_version}.${preview_number}"
                     echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
+                    echo "##vso[task.setvariable variable=IsMajor;isOutput=true]true"
 
                 elif [ $(check_bad_preview_tag "$VERSION") = "true" ] && [ "$MAJOR_LABEL" != "major" ]
                 then
@@ -160,10 +162,12 @@ steps:
                     PATCH=`echo $VERSION | awk -F "." '{print $3}'`
                     NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-${preview_version}.${preview_number}"
                     echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
+                    echo "##vso[task.setvariable variable=IsMajor;isOutput=true]true"
                 elif [ $(check_version_tag "$VERSION") = "true" ] || [ $(check_bad_preview_tag "$VERSION") = "true" ] && [ "$MAJOR_LABEL" = "major" ]
                 then
                     NEW_VERSION=`echo $VERSION | awk -F "-" '{print $1}'`
                     echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
+                    echo "##vso[task.setvariable variable=IsMajor;isOutput=true]true"
                     echo "Major update from pre-release --> Version is no longer a pre-release."
                 else
                     echoerr "Error with pre-release versioning"
