--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -145,10 +145,8 @@ steps:
                     preview_number=`echo $VERSION | awk -F "." '{print $4}'`
                     preview_number=$((preview_number+1))
                     preview_version=`echo $VERSION | awk -F "-" '{print $2}' | awk -F "." '{print $1}'`
-                    MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
-                    MINOR=`echo $VERSION | awk -F "." '{print $2}'`
-                    PATCH=`echo $VERSION | awk -F "." '{print $3}'`
-                    NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-${preview_version}.${preview_number}"
+                    VERSION=`echo $VERSION | awk -F "-" '{print $1}'`
+                    NEW_VERSION="${VERSION}-${preview_version}.${preview_number}"
                     echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
                     echo "##vso[task.setvariable variable=IsMajor;isOutput=true]true"
 
@@ -156,11 +154,7 @@ steps:
                 then
                     echo "Pre-release versioning, no preview number found... Adding a preview number = 1"
                     preview_number="1"
-                    preview_version=`echo $VERSION | awk -F "-" '{print $2}'`
-                    MAJOR=`echo $VERSION | awk -F "." '{print $1}'`
-                    MINOR=`echo $VERSION | awk -F "." '{print $2}'`
-                    PATCH=`echo $VERSION | awk -F "." '{print $3}'`
-                    NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}-${preview_version}.${preview_number}"
+                    NEW_VERSION="${VERSION}-${preview_version}.${preview_number}"
                     echo "##vso[task.setvariable variable=Version;isOutput=true]$NEW_VERSION"
                     echo "##vso[task.setvariable variable=IsMajor;isOutput=true]true"
                 elif [ $(check_version_tag "$VERSION") = "true" ] || [ $(check_bad_preview_tag "$VERSION") = "true" ] && [ "$MAJOR_LABEL" = "major" ]
