--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -165,7 +165,7 @@ steps:
                     echo "##vso[task.setvariable variable=IsMajor;isOutput=true]true"
                     echo "Major update from pre-release --> Version is no longer a pre-release."
                 else
-                    echoerr "Error with pre-release versioning"
+                    echoerr "No preview version found. Try to add [new] label in the pull request to create a preview version from the last version."
                 fi
             fi
         
