Change nuget key for publishing on dolittle feed

--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -89,7 +89,7 @@ jobs:
           command: push
           nugetFeedType: "external"
           packagesToPush: "/root/.nuget/dolittle-packages/**/*.nupkg"
-          publishFeedCredentials: "myget_mathieu"
+          publishFeedCredentials: "nuget_credential"
 
       - template: ../Versioning/commit_version_tag.yml
         parameters:
