--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -17,24 +17,64 @@ steps:
         echo "$LABELS"
     }
     get_latest_version_tag () {
-        local TAG_REFS=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname)
-        while [ ! "$TAG_REFS" ]
+        local i=1
+        local version=""
+        local nb_tags=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname | grep -c "refs/tags/")
+        
+        while [ $i -le $nb_tags ];
         do
-            sleep 1
-        done
+            version_ref=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname | grep "refs/tags" | grep -e "[0-9]\+\.[0-9]\+\.[0-9]\+$" | head -$i | tail -1 )
+            version_commit=$(echo "$version_ref" | awk -F" " '{print $1}')
+            branch_contains=$(git branch --contains $version_commit)
+            result=$(echo "$branch_contains" | grep "master")
+            if [ "$result" != "" ];   then
+                version=`echo "$version_ref" | awk -F "refs/tags/" '{print $2}'`
+                break
+            else
+                version=""
+                i=$(($i+1))
+            fi
+        done;
+        echo "$version"
+        
+        # local TAG_REFS=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname)
+        # while [ ! "$TAG_REFS" ]
+        # do
+            # sleep 1
+        # done
 
-        local VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+$" | head -1)
-        echo "$VERSION"
+        # local VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+$" | head -1)
+        # echo "$VERSION"
     }
     get_preview_version_tag () {
-        local TAG_REFS=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname)
-        while [ ! "$TAG_REFS" ]
+        local i=1
+        local version=""
+        local nb_tags=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname | grep -c "refs/tags/")
+        
+        while [ $i -le $nb_tags ];
         do
-            sleep 1
-        done
+            version_ref=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname | grep "refs/tags" | grep -e "[0-9]\+\.[0-9]\+\.[0-9]\+\-.\+\.\?[0-9]*$" | head -$i | tail -1 )
+            version_commit=$(echo "$version_ref" | awk -F" " '{print $1}')
+            branch_contains=$(git branch --contains $version_commit)
+            result=$(echo "$branch_contains" | grep "master")
+            if [ "$result" != "" ];   then
+                version=`echo "$version_ref" | awk -F "refs/tags/" '{print $2}'`
+                break
+            else
+                version=""
+                i=$(($i+1))
+            fi
+        done;
+        echo "$version"
+        
+        # local TAG_REFS=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname)
+        # while [ ! "$TAG_REFS" ]
+        # do
+            # sleep 1
+        # done
 
-        local VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+\-.\+\.\?[0-9]*$" | head -1)
-        echo "$VERSION"
+        # local VERSION=$(echo "$TAG_REFS" | grep -o -E "refs/tags/\S+" | awk -F "tags/" '{print $2}' | grep -o -e "^[0-9]\+\.[0-9]\+\.[0-9]\+\-.\+\.\?[0-9]*$" | head -1)
+        # echo "$VERSION"
     }
     check_preview_tag () {
         local TAG_REFS=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname)
