--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -27,6 +27,7 @@ steps:
             version_commit=$(echo "$version_ref" | awk -F" " '{print $1}')
             branch_contains=$(git branch --contains $version_commit)
             result=$(echo "$branch_contains" | grep "master")
+            echo "sha : $version_commit"
             if [ "$result" != "" ];   then
                 version=`echo "$version_ref" | awk -F "refs/tags/" '{print $2}'`
                 break
@@ -57,6 +58,7 @@ steps:
             version_commit=$(echo "$version_ref" | awk -F" " '{print $1}')
             branch_contains=$(git branch --contains $version_commit)
             result=$(echo "$branch_contains" | grep "master")
+            echo "sha : $version_commit"
             if [ "$result" != "" ];   then
                 version=`echo "$version_ref" | awk -F "refs/tags/" '{print $2}'`
                 break
@@ -270,4 +272,4 @@ steps:
     
 - bash: |
     echo "New version = $(set_version.Version)"
-    echo "PullResuest has been merged = $(set_version.IsMerge)"
+    echo "PullRequest has been merged = $(set_version.IsMerge)"
