--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -31,7 +31,7 @@ steps:
                 version=`echo "$version_ref" | awk -F "refs/tags/" '{print $2}'`
                 break
             else
-                echoerr "branch = $result"
+                echoerr "branch = $branch_contains"
                 echoerr "verson_ref = $version_ref"
                 version=""
                 i=$(($i+1))
