--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -27,7 +27,7 @@ steps:
             version_ref=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname | grep "refs/tags" | grep -e "[0-9]\+\.[0-9]\+\.[0-9]\+$" | head -$i | tail -1 )
             version_commit=$(echo "$version_ref" | awk -F" " '{print $1}')
             branch_contains=$(git branch --contains $version_commit)
-            result=$(echo "$branch_contains" | grep "master")
+            result=$(echo "$branch_contains" | grep "HEAD")
             if [ "$result" != "" ];   then
                 version=`echo "$version_ref" | awk -F "refs/tags/" '{print $2}'`
                 break
@@ -59,7 +59,7 @@ steps:
             version_ref=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname | grep "refs/tags" | grep -e "[0-9]\+\.[0-9]\+\.[0-9]\+\-.\+\.\?[0-9]*$" | head -$i | tail -1 )
             version_commit=$(echo "$version_ref" | awk -F" " '{print $1}')
             branch_contains=$(git branch --contains $version_commit)
-            result=$(echo "$branch_contains" | grep "master")
+            result=$(echo "$branch_contains" | grep "HEAD")
             if [ "$result" != "" ];   then
                 version=`echo "$version_ref" | awk -F "refs/tags/" '{print $2}'`
                 break
