--- a/Source/Versioning/set_version_variable.yml
+++ b/Source/Versioning/set_version_variable.yml
@@ -22,18 +22,17 @@ steps:
         local version=""
         local nb_tags=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname | grep -c "refs/tags/")
         
-        echo "$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname | grep "refs/tags" | grep -e "[0-9]\+\.[0-9]\+\.[0-9]\+$")"
         while [ $i -le $nb_tags ];
         do
             version_ref=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort=-v:refname | grep "refs/tags" | grep -e "[0-9]\+\.[0-9]\+\.[0-9]\+$" | head -$i | tail -1 )
             version_commit=$(echo "$version_ref" | awk -F" " '{print $1}')
             branch_contains=$(git branch --contains $version_commit)
             result=$(echo "$branch_contains" | grep "HEAD")
-            echoerr "$result"
             if [ "$result" != "" ];   then
                 version=`echo "$version_ref" | awk -F "refs/tags/" '{print $2}'`
                 break
             else
+                echo "."
                 echoerr "branch = $branch_contains"
                 echoerr "verson_ref = $version_ref"
                 version=""
