Ignoring symbols for push as these are included by convention

--- a/Source/DotNet/pipeline.yml
+++ b/Source/DotNet/pipeline.yml
@@ -88,7 +88,7 @@ jobs:
         inputs:
           command: push
           nugetFeedType: "external"
-          packagesToPush: "/root/.nuget/dolittle-packages/**/*.nupkg"
+          packagesToPush: "/root/.nuget/dolittle-packages/**/*.nupkg;/root/.nuget/dolittle-packages/**/*.symbols.nupkg"
           publishFeedCredentials: "nuget_credential"
 
       - template: ../Versioning/commit_version_tag.yml
