--- a/Source/Test/pipeline.yml
+++ b/Source/Test/pipeline.yml
@@ -28,3 +28,16 @@ jobs:
           echo System.PullRequest.TargetBranch $(System.PullRequest.TargetBranch)
           
         displayName: Print Predefined Variables
+
+      - task: Dolittle.tasks.SetupBuildContext.SetupBuildContext@0
+        name: Context
+        displayName: 'Setting up context'
+        inputs:
+          Connection: 'github.com_woksin'
+
+      - bash: |
+          echo $(Context.PreviousVersion)
+          echo $(Context.ReleaseType)
+          echo $(Context.ShouldPublish)
+        displayName: Printing outputted variables
+      
