--- a/Source/Test/pipeline.yml
+++ b/Source/Test/pipeline.yml
@@ -10,6 +10,7 @@ jobs:
       - group: global-var-pipelines
     steps:
       - bash: ls /azp/agent/_work/_tasks/SetupBuildContext_edffa758-4888-4eda-b886-c0a9afcb9360/0.0.5/
+      - bash: cat /azp/agent/_work/_tasks/SetupBuildContext_edffa758-4888-4eda-b886-c0a9afcb9360/0.0.5/task.js
         
       - bash: |
           echo Build.QueuedBy $(Build.QueuedBy)
