--- a/Source/Test/pipeline.yml
+++ b/Source/Test/pipeline.yml
@@ -9,6 +9,7 @@ jobs:
     variables:
       - group: global-var-pipelines
     steps:
+      - bash: ls /azp/agent/_work/_tasks/SetupBuildContext_edffa758-4888-4eda-b886-c0a9afcb9360/
       - bash: ls /azp/agent/_work/_tasks/SetupBuildContext_edffa758-4888-4eda-b886-c0a9afcb9360/0.0.5/
       - bash: cat /azp/agent/_work/_tasks/SetupBuildContext_edffa758-4888-4eda-b886-c0a9afcb9360/0.0.5/task.js
         
