--- a/Source/Test/pipeline.yml
+++ b/Source/Test/pipeline.yml
@@ -10,7 +10,8 @@ jobs:
       - group: global-var-pipelines
     steps:
       - bash: ls /azp/agent/_work/_tasks/SetupBuildContext_edffa758-4888-4eda-b886-c0a9afcb9360/
-      - bash: ls /azp/agent/_work/_tasks/SetupBuildContext_edffa758-4888-4eda-b886-c0a9afcb9360/0.0.6/
+      - bash: ls /azp/agent/_work/_tasks/SetupBuildContext_edffa758-4888-4eda-b886-c0a9afcb9360/0.0.8/
+      - bash: ls /azp/agent/_work/_tasks/SetupBuildContext_edffa758-4888-4eda-b886-c0a9afcb9360/0.0.8/Distribution
         
       - bash: |
           echo Build.QueuedBy $(Build.QueuedBy)
