--- a/Source/Test/pipeline.yml
+++ b/Source/Test/pipeline.yml
@@ -44,8 +44,8 @@ jobs:
         name: NewVersion
         displayName: Calculating new version
         inputs:
-          PreviousVersion: $[Context.PreviousVersion]
-          ReleaseType: $[Context.ReleaseType]
+          PreviousVersion: $(Context.PreviousVersion)
+          ReleaseType: $(Context.ReleaseType)
 
       - bash: |
           echo $(NewVersion.NextVersion)
