--- a/Source/DotNet/build.yml
+++ b/Source/DotNet/build.yml
@@ -3,6 +3,14 @@ parameters:
   CWD: $(System.DefaultWorkingDirectory)
 
 steps:
+- task: SonarCloudPrepare@1
+  inputs:
+    SonarCloud: 'SonarCloud'
+    organization: 'dolittle-build-testing'
+    scannerMode: 'MSBuild'
+    projectKey: 'dolittle-build-testing_DotNET.Fundamentals'
+    projectName: 'DotNET.Fundamentals'
+    
 - bash: dotnet restore --no-cache --configfile /root/.nuget/NuGet.Config
   workingDirectory: ${{ parameters.CWD }}
   displayName: Restore
@@ -10,6 +18,8 @@ steps:
 - bash: dotnet build --no-restore --configuration ${{ parameters.buildConfiguration }}
   workingDirectory: ${{ parameters.CWD }}
   displayName: Build
+  
+- task: SonarCloudAnalyze@1
 
 - bash: dotnet test --no-build --configuration ${{ parameters.buildConfiguration }}
   workingDirectory: ${{ parameters.CWD }}    
