--- a/Source/Test/pipeline.yml
+++ b/Source/Test/pipeline.yml
@@ -9,6 +9,7 @@ jobs:
     variables:
       - group: global-var-pipelines
     steps:
+      - script: echo ${{ parameters.CASCADES }}
       - task: Dolittle.tasks.SetupBuildContext.SetupBuildContext@0
         name: Context
         displayName: Setting up context
@@ -22,4 +23,3 @@ jobs:
           PreviousVersion: $(Context.PreviousVersion)
           ReleaseType: $(Context.ReleaseType)
 
-      
