--- a/Source/Test/pipeline.yml
+++ b/Source/Test/pipeline.yml
@@ -9,7 +9,7 @@ jobs:
     variables:
       - group: global-var-pipelines
     steps:
-      - script: echo ${{ parameters.CASCADES }}
+      - script: echo ${{ join(',', parameters.CASCADES) }}
       - task: Dolittle.tasks.SetupBuildContext.SetupBuildContext@0
         name: Context
         displayName: Setting up context
