--- a/Source/Agent/Dockerfile
+++ b/Source/Agent/Dockerfile
@@ -35,7 +35,8 @@ RUN apt-get update \
         mono-devel \
         yq \
         python3-pip \
-        dotnet-sdk-3.0
+        dotnet-sdk-3.0 \
+        openjdk-8-jre-headless
 
 WORKDIR /azp
 
