--- a/Source/Test/pipeline.yml
+++ b/Source/Test/pipeline.yml
@@ -14,7 +14,7 @@ jobs:
         name: Context
         displayName: Setting up context
         inputs:
-          Connection: 'dolittle-build-testing'
+          Connection: 'service-dolittle-build'
 
       - task: Dolittle.tasks.CalculateNewVersion.CalculateNewVersion@0
         name: NewVersion
@@ -27,7 +27,7 @@ jobs:
         condition: eq(variables['Context.ShouldPublish'], 'true')
         displayName: Triggering cascading builds
         inputs:
-          Connection: 'github.com_woksin'
+          Connection: 'service-dolittle-build'
           ShouldPublish: $(Context.ShouldPublish)
           NextVersion: $(NewVersion.NextVersion)
           Cascades: ${{ join(',', parameters.CASCADES) }}
