--- a/Source/Test/pipeline.yml
+++ b/Source/Test/pipeline.yml
@@ -23,20 +23,20 @@ jobs:
           ReleaseType: $(Context.ReleaseType)
       
       - task: Dolittle.tasks.TagNewVersion.TagNewVersion@0
-        # condition: and(succeeded(), eq(variables['Context.ShouldPublish'], 'true'))
+        condition: and(succeeded(), eq(variables['Context.ShouldPublish'], 'true'))
         displayName: Tagging new version
         inputs:
           Connection: 'service-dolittle-build'
           Version: $(NewVersion.NextVersion)
 
-      # - task: Dolittle.tasks.TriggerCascadingBuilds.TriggerCascadingBuilds@0
-      #   condition: and(succeeded(), eq(variables['Context.ShouldPublish'], 'true'))
-      #   displayName: Triggering cascading builds
-      #   inputs:
-      #     Connection: 'service-dolittle-build'
-      #     ShouldPublish: $(Context.ShouldPublish)
-      #     NextVersion: $(NewVersion.NextVersion)
-      #     Cascades: ${{ join(',', parameters.CASCADES) }}
+      - task: Dolittle.tasks.TriggerCascadingBuilds.TriggerCascadingBuilds@0
+        condition: and(succeeded(), eq(variables['Context.ShouldPublish'], 'true'))
+        displayName: Triggering cascading builds
+        inputs:
+          Connection: 'service-dolittle-build'
+          ShouldPublish: $(Context.ShouldPublish)
+          NextVersion: $(NewVersion.NextVersion)
+          Cascades: ${{ join(',', parameters.CASCADES) }}
 
       
 
