--- a/Source/DotNet/build.yml
+++ b/Source/DotNet/build.yml
@@ -3,7 +3,7 @@ parameters:
   CWD: $(System.DefaultWorkingDirectory)
 
 steps:
-- bash: dotnet restore --no-cache --configfile /root/.nuget/NuGet.Config -s /root/.nuget/packages
+- bash: dotnet restore --no-cache --configfile /root/.nuget/NuGet.Config -s /root/.nuget/packages -s https://api.nuget.org/v3/index.json
   workingDirectory: ${{ parameters.CWD }}
   displayName: Restore
 
