Remove useless parameters

--- a/Source/DotNet/build.yml
+++ b/Source/DotNet/build.yml
@@ -1,7 +1,3 @@
-parameters:
-  buildConfiguration: 'Release'
-  CWD: $(System.DefaultWorkingDirectory)
-
 steps:
 - task: SonarCloudPrepare@1
   inputs:
@@ -12,15 +8,12 @@ steps:
     projectName: $(sonarProjectName)
     
 - bash: dotnet restore --no-cache --configfile /root/.nuget/NuGet.Config
-  workingDirectory: ${{ parameters.CWD }}
   displayName: Restore
 
-- bash: dotnet build --no-restore --configuration ${{ parameters.buildConfiguration }}
-  workingDirectory: ${{ parameters.CWD }}
+- bash: dotnet build --no-restore --configuration Release
   displayName: Build
   
-- bash: dotnet test --no-build --configuration ${{ parameters.buildConfiguration }}
-  workingDirectory: ${{ parameters.CWD }}    
+- bash: dotnet test --no-build --configuration Release
   displayName: Test
 
 - task: SonarCloudAnalyze@1
