--- a/Source/DotNet/build.yml
+++ b/Source/DotNet/build.yml
@@ -1,11 +1,11 @@
 steps:
-- task: SonarCloudPrepare@1
-  inputs:
-    SonarCloud: 'SonarCloud'
-    organization: 'dolittle-build-testing'
-    scannerMode: 'MSBuild'
-    projectKey: $(sonarProjectKey)
-    projectName: $(sonarProjectName)
+# - task: SonarCloudPrepare@1
+  # inputs:
+    # SonarCloud: 'SonarCloud'
+    # organization: 'dolittle-build-testing'
+    # scannerMode: 'MSBuild'
+    # projectKey: $(sonarProjectKey)
+    # projectName: $(sonarProjectName)
     
 - bash: dotnet restore --no-cache --configfile /root/.nuget/NuGet.Config
   displayName: Restore
@@ -16,4 +16,4 @@ steps:
 - bash: dotnet test --no-build --configuration Release
   displayName: Test
 
-- task: SonarCloudAnalyze@1
+# - task: SonarCloudAnalyze@1
