--- a/Source/DotNet/build.yml
+++ b/Source/DotNet/build.yml
@@ -1,3 +1,6 @@
+parameters:
+  CWD: $(System.DefaultWorkingDirectory)
+
 steps:
 - task: DotNetCoreInstaller@0
   inputs:
@@ -12,6 +15,7 @@ steps:
     projectName: $(sonarProjectName)
 
 - bash: dotnet restore --no-cache --configfile /root/.nuget/NuGet.Config
+  workingDirectory: ${{ parameters.CWD }}
   displayName: Restore
 
 - bash: dotnet build --no-restore --configuration Release
