--- a/Source/DotNet/build.yml
+++ b/Source/DotNet/build.yml
@@ -11,10 +11,7 @@ steps:
     projectKey: $(sonarProjectKey)
     projectName: $(sonarProjectName)
 
-- bash: dotnet restore --no-cache --configfile /root/.nuget/NuGet.Config
-  displayName: Restore
-
-- bash: dotnet build --no-restore --configuration Release
+- bash: dotnet build --configuration Release
   displayName: Build
   
 - bash: dotnet test --no-build --configuration Release
